# Makefile.am for etc/afpd/

pkgconfdir = @PKGCONFDIR@
BUILT_SOURCES =
EXTRA_DIST = afpstats-service.xml afpstats_service_glue.h
CLEANFILES =
DISTCLEANFILES =

sbin_PROGRAMS = afpd

afpd_SOURCES = \
	afp_config.c \
	afp_dsi.c \
	afp_options.c \
	afp_util.c \
	afprun.c \
	appl.c \
	auth.c \
	catsearch.c \
	desktop.c \
	dircache.c \
	directory.c \
	enumerate.c \
	extattrs.c \
	fce_api.c \
	fce_util.c \
	file.c \
	filedir.c \
	fork.c \
	hash.c \
	main.c \
	mangle.c \
	messages.c  \
	ofork.c \
	status.c \
	switch.c \
	uam.c \
	uid.c \
	unix.c \
	volume.c


afpd_LDADD =  \
	$(top_builddir)/libatalk/libatalk.la \
	@LIBGCRYPT_LIBS@ @GSSAPI_LIBS@ @KRB5_LIBS@ @MYSQL_LIBS@

afpd_LDFLAGS = -export-dynamic

afpd_CFLAGS = \
	@GSSAPI_CFLAGS@ @KRB5_CFLAGS@\
	-DAPPLCNAME \
	-DSERVERTEXT=\"$(SERVERTEXT)/\" \
	-D_PATH_AFPDPWFILE=\"$(pkgconfdir)/afppasswd\" \
	-D_PATH_AFPDUAMPATH=\"$(UAMS_PATH)/\" \
	-D_PATH_CONFDIR=\"$(pkgconfdir)/\" \
	-D_PATH_STATEDIR='"$(localstatedir)/netatalk/"'

if HAVE_DBUS_GLIB
BUILT_SOURCES += afpstats_service_glue.h
DISTCLEANFILES += afpstats_service_glue.h

afpstats_service_glue.h: afpstats-service.xml
	$(LIBTOOL) --mode=execute \
		dbus-binding-tool \
			--prefix=afpstats_obj \
			--mode=glib-server \
			--output=afpstats_service_glue.h \
			$(top_srcdir)/etc/afpd/afpstats-service.xml

afpd_SOURCES += afpstats.c afpstats_obj.c
afpd_CFLAGS  += $(DBUS_CFLAGS) $(DBUS_GLIB_CFLAGS) $(DBUS_GTHREAD_CFLAGS) -DDBUS_COMPILATION
afpd_LDFLAGS += $(DBUS_LIBS) $(DBUS_GLIB_LIBS) $(DBUS_GTHREAD_LIBS) -ldbus-glib-1
endif

noinst_HEADERS = auth.h afp_config.h desktop.h directory.h fce_api_internal.h file.h \
	 filedir.h fork.h icon.h mangle.h misc.h status.h switch.h \
	 uam_auth.h uid.h unix.h volume.h hash.h extattrs.h \
	 dircache.h afpstats_obj.h afpstats.h
